<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.warrington.tepqc.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/tep_crest" />

    <TextView
        android:id="@+id/StoryHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:height="20dp"
        android:text="@string/textView1"
        android:textSize="12sp"
        android:textStyle="bold" 
        />
    
    <Button android:id="@+id/mainButton1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/mainButton1"
        	android:onClick="goBrotherMain"
        	 />
    
    <Button android:id="@+id/mainButton2"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/mainButton2"
        	android:onClick="goRushMain"
        	 />
    
</LinearLayout>
